 * Added a workaround for missing panels and frames of LibreOffice's input fields.
 * Made Kvantum Manager a little more keyboard friendly.
 * Ensure that the left mouse button is pressed on starting window dragging (it may not be pressed in very rare cases, where a popup is shown after moving the cursor and closed before dragging).
 * Added a variant of KvCurves3d with light selection color.

V0.20.2
---------
 * Allow opening of the user config file from Kvantum Manager.
 * Respect KDE's scrollbar click behavior by default.
 * Elide push button text if there isn't enough space for it.
 * Better eliding of multiline texts.
 * Added LibreOffice to the black list of window dragging (as a workaround for issues related to its Qt5 skin under Wayland).

V0.20.1
---------
 * In the case of bad hard-coded styles, ignore non-base background colors of line-edits if their saturations are small enough.
 * Blacklisted QQuickWidget with window dragging.

V0.20.0
---------
 * Dropped the support for Qt5 < 5.12.
 * Added two themes (KvDark and KvSimplicityDarkLight).
 * Better colors for texts and symbolic icons of disabled toggled buttons.
 * Use frame sizes of "ScrollbarTransientSlider" if existing.
 * Decreased the combo box width by 2*PM_FocusFrameHMargin, which was added before drawing view-items inside Kvantum.
 * A little more compact busy indicator for ordinary progressbars.
 * Removed the key about KCapacityBar. It's a redundant KDE widget that should always be drawn as a progressbar.
 * Added a key for always centering normal tabs (in contrast to those in the document mode).
 * Disable kinetic scrolling inside subwindows.
 * Guarantee that the width hint of an icon-only button isn't smaller than its height hint.
 * Fixed a case of underlined shortcuts in tray menus without Alt being pressed.
 * Added an option (to Kvantum Manager) for styling vertical toolbars. It's disabled by default and also when "single_top_toolbar" is "true".